--- a/index.html
+++ b/index.html
@@ -67,18 +67,20 @@
 
     <main>
       <section class="section section-hero">
-        <div class="container">
-          <h1 class="section-hero__title">
-            Эффективные решения <br />для вашего бизнеса
-          </h1>
-          <button
-            class="section-hero__button"
-            type="button"
-            aria-label="Форма заказа услуги"
-            data-modal-open
-          >
-            Заказать услугу
-          </button>
+        <div class="section-hero__thumb">
+          <div class="container">
+            <h1 class="section-hero__title">
+              Эффективные решения <br />для вашего бизнеса
+            </h1>
+            <button
+              class="section-hero__button"
+              type="button"
+              aria-label="Форма заказа услуги"
+              data-modal-open
+            >
+              Заказать услугу
+            </button>
+          </div>
         </div>
       </section>
 
