LF to CRLF in linux VScode

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
   <body>
     <header class="page-header">
       <div class="container page-header__container">
-        <a class="logo page-header__logo" id="logo" href="#logo"
+        <a class="logo page-header__logo" id="logo" href="./index.html"
           >Web<span class="logo__studio logo__studio--black">Studio</span></a
         >
         <div class="navigation__menu">
