--- a/index.html
+++ b/index.html
@@ -180,8 +180,9 @@
           <h2 class="section-team__title">Наша команда</h2>
           <ul class="personal-cards">
             <li class="personal-cards__item">
-              <div class="thumb">
+              <div class="personal-cards__thumb">
                 <img
+                  class="personal-cards__photo"
                   src="images/avatar-igordemyanenko.jpg"
                   alt="ава Ігорь Демьяненко"
                   width="270"
