--- a/index.html
+++ b/index.html
@@ -438,87 +438,86 @@
           </ul>
         </div>
       </section>
+      <section class="section section-clients">
+        <div class="container">
+          <h2 class="clients__title">Постоянные клиенты</h2>
+          <ul class="clients">
+            <li class="clients__item">
+              <a
+                class="clients__link"
+                href=""
+                target="_blank"
+                rel="noreferrer noopener"
+              >
+                <svg class="clients__icon" width="45" height="50">
+                  <use href="./images/icons.svg#logo-yaco"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients__item">
+              <a
+                class="clients__link"
+                href=""
+                target="_blank"
+                rel="noreferrer noopener"
+              >
+                <svg class="clients__icon" width="40" height="52">
+                  <use href="./images/icons.svg#logo-tagline-here"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients__item">
+              <a
+                class="clients__link"
+                href=""
+                target="_blank"
+                rel="noreferrer noopener"
+              >
+                <svg class="clients__icon" width="41" height="43">
+                  <use href="./images/icons.svg#logo-company"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients__item">
+              <a
+                class="clients__link"
+                href=""
+                target="_blank"
+                rel="noreferrer noopener"
+              >
+                <svg class="clients__icon" width="80" height="43">
+                  <use href="./images/icons.svg#logo-foster-peters"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients__item">
+              <a
+                class="clients__link"
+                href=""
+                target="_blank"
+                rel="noreferrer noopener"
+              >
+                <svg class="clients__icon" width="59" height="47">
+                  <use href="./images/icons.svg#logo-brand"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="clients__item">
+              <a
+                class="clients__link"
+                href=""
+                target="_blank"
+                rel="noreferrer noopener"
+              >
+                <svg class="clients__icon" width="89" height="46">
+                  <use href="./images/icons.svg#logo-tag-line"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
-
-    <section class="section section-clients">
-      <div class="container">
-        <h2 class="clients__title">Постоянные клиенты</h2>
-        <ul class="clients">
-          <li class="clients__item">
-            <a
-              class="clients__link"
-              href=""
-              target="_blank"
-              rel="noreferrer noopener"
-            >
-              <svg class="clients__icon" width="45" height="50">
-                <use href="./images/icons.svg#logo-yaco"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="clients__item">
-            <a
-              class="clients__link"
-              href=""
-              target="_blank"
-              rel="noreferrer noopener"
-            >
-              <svg class="clients__icon" width="40" height="52">
-                <use href="./images/icons.svg#logo-tagline-here"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="clients__item">
-            <a
-              class="clients__link"
-              href=""
-              target="_blank"
-              rel="noreferrer noopener"
-            >
-              <svg class="clients__icon" width="41" height="43">
-                <use href="./images/icons.svg#logo-company"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="clients__item">
-            <a
-              class="clients__link"
-              href=""
-              target="_blank"
-              rel="noreferrer noopener"
-            >
-              <svg class="clients__icon" width="80" height="43">
-                <use href="./images/icons.svg#logo-foster-peters"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="clients__item">
-            <a
-              class="clients__link"
-              href=""
-              target="_blank"
-              rel="noreferrer noopener"
-            >
-              <svg class="clients__icon" width="59" height="47">
-                <use href="./images/icons.svg#logo-brand"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="clients__item">
-            <a
-              class="clients__link"
-              href=""
-              target="_blank"
-              rel="noreferrer noopener"
-            >
-              <svg class="clients__icon" width="89" height="46">
-                <use href="./images/icons.svg#logo-tag-line"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </section>
 
     <footer class="page-footer" id="contacts">
       <div class="container page-footer__container">
@@ -542,7 +541,7 @@
             </ul>
           </address>
         </div>
-        <div class="join-offer">
+        <div class="join-offer join-offer--mobile">
           <p class="join-offer__title">
             <b>Присоединяйтесь</b>
           </p>
@@ -597,7 +596,7 @@
             </li>
           </ul>
         </div>
-        <div class="sign-container">
+        <div class="sign-container sign-container--mobile">
           <p class="sign-container__title">
             <b>Подпишитесь на рассылку</b>
           </p>
