--- a/portfolio.html
+++ b/portfolio.html
@@ -391,7 +391,6 @@
         </div>
       </section>
     </main>
-
     <footer class="page-footer" id="contacts">
       <div class="container page-footer__container">
         <div class="address-container">
@@ -414,7 +413,7 @@
             </ul>
           </address>
         </div>
-        <div class="join-offer">
+        <div class="join-offer join-offer--mobile">
           <p class="join-offer__title">
             <b>Присоединяйтесь</b>
           </p>
@@ -469,7 +468,7 @@
             </li>
           </ul>
         </div>
-        <div class="sign-container">
+        <div class="sign-container sign-container--mobile">
           <p class="sign-container__title">
             <b>Подпишитесь на рассылку</b>
           </p>
