--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -46,7 +47,11 @@
           <ul class="communication">
             <li class="communication__item">
               <a class="communication__link" href="mailto:info@devstudio.com">
-                <svg class="communication__icon" width="16" height="12">
+                <svg
+                  class="communication__icon communication__icon--mail"
+                  width="16"
+                  height="12"
+                >
                   <use href="./images/icons.svg#icon-mail"></use>
                 </svg>
                 info@devstudio.com
@@ -54,7 +59,11 @@
             </li>
             <li class="communication__item">
               <a class="communication__link" href="tel:+380961111111">
-                <svg class="communication__icon" width="10" height="16">
+                <svg
+                  class="communication__icon communication__icon--smartphone"
+                  width="10"
+                  height="16"
+                >
                   <use href="./images/icons.svg#icon-smartphone"></use>
                 </svg>
                 +38 096 111 11 11
