--- a/portfolio.html
+++ b/portfolio.html
@@ -127,11 +127,37 @@
                 rel="noopener noreferrer"
               >
                 <div class="card__thumb">
-                  <img
-                    src="images/tehnokryak.jpg"
-                    alt="фото tehnokryak"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/tehnokryak_450x294.jpg    1x,
+                        ./images/tehnokryak_450x294@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/tehnokryak_370x294.jpg    1x,
+                        ./images/tehnokryak_370x294@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/tehnokryak_354x294.jpg    1x,
+                        ./images/tehnokryak_354x294@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <img
+                      class="card__photo"
+                      src="./images/tehnokryak_450x294.jpg"
+                      alt="фото tehnokryak"
+                      width="100%"
+                      height="100%"
+                    />
+                  </picture>
+
                   <div class="card__overlay">
                     <p class="card__describe">
                       Технокряк это современная площадка распространения
@@ -157,11 +183,36 @@
                 rel="noopener noreferrer"
               >
                 <div class="card__thumb">
-                  <img
-                    src="images/poster-neworlean-vs-goldenstar.jpg"
-                    alt="фото poster-neworlean-vs-goldenstar"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/poster-neworlean-vs-goldenstar_450x294.jpg    1x,
+                        ./images/poster-neworlean-vs-goldenstar_450x294@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/poster-neworlean-vs-goldenstar_370x294.jpg    1x,
+                        ./images/poster-neworlean-vs-goldenstar_370x294@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/poster-neworlean-vs-goldenstar_354x294.jpg    1x,
+                        ./images/poster-neworlean-vs-goldenstar_354x294@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <img
+                      class="card__photo"
+                      src="./images/poster-neworlean-vs-goldenstar_450x294.jpg"
+                      alt="фото tehnokryak"
+                      width="100%"
+                      height="100%"
+                    />
+                  </picture>
                   <div class="card__overlay">
                     <p class="card__describe">
                       Постер Neworlean vs Goldenstar это современная площадка
@@ -187,11 +238,36 @@
                 rel="noopener noreferrer"
               >
                 <div class="card__thumb">
-                  <img
-                    src="images/restoran-seafood.jpg"
-                    alt="фото Restaurant SeaFood"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/restoran-seafood_450x294.jpg    1x,
+                        ./images/restoran-seafood_450x294@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/restoran-seafood_370x294.jpg    1x,
+                        ./images/restoran-seafood_370x294@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/restoran-seafood_354x294.jpg    1x,
+                        ./images/restoran-seafood_354x294@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <img
+                      class="card__photo"
+                      src="./images/restoran-seafood_450x294.jpg"
+                      alt="фото tehnokryak"
+                      width="100%"
+                      height="100%"
+                    />
+                  </picture>
                   <div class="card__overlay">
                     <p class="card__describe">
                       Ресторан SeaFood это современная площадка распространения
@@ -217,11 +293,36 @@
                 rel="noopener noreferrer"
               >
                 <div class="card__thumb">
-                  <img
-                    src="images/proekt-prime.jpg"
-                    alt="фото Project Prime"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/proekt-prime_450x294.jpg    1x,
+                        ./images/proekt-prime_450x294@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/proekt-prime_370x294.jpg    1x,
+                        ./images/proekt-prime_370x294@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/proekt-prime_354x294.jpg    1x,
+                        ./images/proekt-prime_354x294@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <img
+                      class="card__photo"
+                      src="./images/proekt-prime_450x294.jpg"
+                      alt="фото tehnokryak"
+                      width="100%"
+                      height="100%"
+                    />
+                  </picture>
                   <div class="card__overlay">
                     <p class="card__describe">
                       Проект Prime это современная площадка распространения
@@ -247,11 +348,36 @@
                 rel="noopener noreferrer"
               >
                 <div class="card__thumb">
-                  <img
-                    src="images/proekt-boxes.jpg"
-                    alt="фото Project Boxes"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/proekt-boxes_450x294.jpg    1x,
+                        ./images/proekt-boxes_450x294@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/proekt-boxes_370x294.jpg    1x,
+                        ./images/proekt-boxes_370x294@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/proekt-boxes_354x294.jpg    1x,
+                        ./images/proekt-boxes_354x294@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <img
+                      class="card__photo"
+                      src="./images/proekt-boxes_450x294.jpg"
+                      alt="фото tehnokryak"
+                      width="100%"
+                      height="100%"
+                    />
+                  </picture>
                   <div class="card__overlay">
                     <p class="card__describe">
                       Проект Boxes это современная площадка распространения
@@ -277,11 +403,36 @@
                 rel="noopener noreferrer"
               >
                 <div class="card__thumb">
-                  <img
-                    src="images/inspiration-has-no-borders.jpg"
-                    alt="фото Inspiration has no Boarders"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/inspiration-has-no-borders_450x294.jpg    1x,
+                        ./images/inspiration-has-no-borders_450x294@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/inspiration-has-no-borders_370x294.jpg    1x,
+                        ./images/inspiration-has-no-borders_370x294@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/inspiration-has-no-borders_354x294.jpg    1x,
+                        ./images/inspiration-has-no-borders_354x294@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <img
+                      class="card__photo"
+                      src="./images/inspiration-has-no-borders_450x294.jpg"
+                      alt="фото tehnokryak"
+                      width="100%"
+                      height="100%"
+                    />
+                  </picture>
                   <div class="card__overlay">
                     <p class="card__describe">
                       Inspiration has no Boarders это современная площадка
@@ -307,11 +458,36 @@
                 rel="noopener noreferrer"
               >
                 <div class="card__thumb">
-                  <img
-                    src="images/izdanie-limited-edition.jpg"
-                    alt="фото Limited Edition"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/izdanie-limited-edition_450x294.jpg    1x,
+                        ./images/izdanie-limited-edition_450x294@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/izdanie-limited-edition_370x294.jpg    1x,
+                        ./images/izdanie-limited-edition_370x294@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/izdanie-limited-edition_354x294.jpg    1x,
+                        ./images/izdanie-limited-edition_354x294@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <img
+                      class="card__photo"
+                      src="./images/izdanie-limited-edition_450x294.jpg"
+                      alt="фото tehnokryak"
+                      width="100%"
+                      height="100%"
+                    />
+                  </picture>
                   <div class="card__overlay">
                     <p class="card__describe">
                       Limited Edition это современная площадка распространения
@@ -337,11 +513,37 @@
                 rel="noopener noreferrer"
               >
                 <div class="card__thumb">
-                  <img
-                    src="images/proekt-lab.jpg"
-                    alt="фото Project Lab"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/proekt-lab_450x294.jpg    1x,
+                        ./images/proekt-lab_450x294@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/proekt-lab_370x294.jpg    1x,
+                        ./images/proekt-lab_370x294@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/proekt-lab_354x294.jpg    1x,
+                        ./images/proekt-lab_354x294@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+
+                    <img
+                      class="card__photo"
+                      src="./images/proekt-lab_450x294.jpg"
+                      alt="фото tehnokryak"
+                      width="100%"
+                      height="100%"
+                    />
+                  </picture>
                   <div class="card__overlay">
                     <p class="card__describe">
                       Проект Lab это современная площадка распространения
@@ -367,11 +569,36 @@
                 rel="noopener noreferrer"
               >
                 <div class="card__thumb">
-                  <img
-                    src="images/growing-business.jpg"
-                    alt="фото Growing Business"
-                    width="370"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/growing-business_450x294.jpg    1x,
+                        ./images/growing-business_450x294@2x.jpg 2x
+                      "
+                      media="(max-width: 767px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/growing-business_370x294.jpg    1x,
+                        ./images/growing-business_370x294@2x.jpg 2x
+                      "
+                      media="(min-width: 1200px)"
+                    />
+                    <source
+                      srcset="
+                        ./images/growing-business_354x294.jpg    1x,
+                        ./images/growing-business_354x294@2x.jpg 2x
+                      "
+                      media="(min-width: 768px)"
+                    />
+                    <img
+                      class="card__photo"
+                      src="./images/growing-business_450x294.jpg"
+                      alt="фото tehnokryak"
+                      width="100%"
+                      height="100%"
+                    />
+                  </picture>
                   <div class="card__overlay">
                     <p class="card__describe">
                       Growing Business это современная площадка распространения
