--- a/portfolio.html
+++ b/portfolio.html
@@ -739,5 +739,96 @@
         </div>
       </div>
     </footer>
+
+    <div class="mobile-menu js-menu-container">
+      <button
+        class="closeMenu-button mobile-menu__closeMenu-button js-close-menu"
+      >
+        <svg class="closeMenu-button__icon" width="40" height="40">
+          <use href="./images/icons.svg#icon-close_40px" />
+        </svg>
+      </button>
+      <nav class="navigation">
+        <ul class="navigation__list navigation__list--mobile-menu">
+          <li class="navigation__item navigation__item--mobile-menu">
+            <a
+              class="navigation__link navigation__link--mobile-menu navigation__link--current"
+              href="./index.html"
+              >Студия</a
+            >
+          </li>
+          <li class="navigation__item navigation__item--mobile-menu">
+            <a
+              class="navigation__link navigation__link--mobile-menu navigation__link--current"
+              href="./portfolio.html"
+              >Портфолио</a
+            >
+          </li>
+          <li class="navigation__item navigation__item--mobile-menu">
+            <a
+              class="navigation__link navigation__link--mobile-menu"
+              href="#contacts"
+              >Контакты</a
+            >
+          </li>
+        </ul>
+      </nav>
+      <ul class="communication communication--mobile-menu">
+        <li class="communication__item communication__item--mobile-menu">
+          <a
+            class="communication__link communication__link--mobile-menu"
+            href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </li>
+        <li class="communication__item communication__item--mobile-menu">
+          <a
+            class="communication__link communication__link--mobile-menu"
+            href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li class="communication__item communication__item--mobile-menu">
+          <ul class="social-networks social-networks--mobile-menu">
+            <li
+              class="social-networks__item social-networks__item--mobile-menu"
+            >
+              <a
+                class="social-networks__link social-networks__link--mobile-menu"
+                href=""
+                >Instagram</a
+              >
+            </li>
+            <li
+              class="social-networks__item social-networks__item--mobile-menu"
+            >
+              <a
+                class="social-networks__link social-networks__link--mobile-menu"
+                href=""
+                >Twitter</a
+              >
+            </li>
+            <li
+              class="social-networks__item social-networks__item--mobile-menu"
+            >
+              <a
+                class="social-networks__link social-networks__link--mobile-menu"
+                href=""
+                >Facebook</a
+              >
+            </li>
+            <li
+              class="social-networks__item social-networks__item--mobile-menu"
+            >
+              <a
+                class="social-networks__link social-networks__link--mobile-menu"
+                href=""
+                >LinkedIn</a
+              >
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
