--- a/portfolio.html
+++ b/portfolio.html
@@ -752,7 +752,7 @@
         <ul class="navigation__list navigation__list--mobile-menu">
           <li class="navigation__item navigation__item--mobile-menu">
             <a
-              class="navigation__link navigation__link--mobile-menu navigation__link--current"
+              class="navigation__link navigation__link--mobile-menu"
               href="./index.html"
               >Студия</a
             >
