Add aria-label for some buttons

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         >
         <button
           class="openMenu-button page-header__openMenu-button js-open-menu"
+          aria-label="Открытие меню навигации"
         >
           <svg class="openMenu-button__icon" width="40" height="40">
             <use href="./images/icons.svg#icon-menu_40px" />
@@ -787,6 +788,7 @@
     <div class="mobile-menu js-menu-container">
       <button
         class="closeMenu-button mobile-menu__closeMenu-button js-close-menu"
+        aria-label="Закрытие меню навигации"
       >
         <svg class="closeMenu-button__icon" width="40" height="40">
           <use href="./images/icons.svg#icon-close_40px" />
