--- a/portfolio.html
+++ b/portfolio.html
@@ -743,6 +743,7 @@
     <div class="mobile-menu js-menu-container">
       <button
         class="closeMenu-button mobile-menu__closeMenu-button js-close-menu"
+        aria-label="Закрытие меню навигации"
       >
         <svg class="closeMenu-button__icon" width="40" height="40">
           <use href="./images/icons.svg#icon-close_40px" />
